@@ -1,3 +1,8 @@
+2008-04-26 svu
+
+	* libxklavier/xklavier_config_iso.c: another lost xpath, better
+	handling of lowercase
+
 2008-04-25 svu
 
 	* libxklavier/xklavier_config_iso.c: lost xpath
